--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 jupyter = "^1.0.0"
 pandas = "^1.4.1"
 snntorch = "^0.5.1"
+scikit-learn = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
