--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ ipython-genutils==0.2.0
 ipywidgets==8.0.2
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.16.0
 jupyter==1.0.0
 jupyter-console==6.4.4
@@ -70,13 +71,17 @@ pyzmq==24.0.1
 qtconsole==5.3.2
 QtPy==2.2.1
 requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.3
 Send2Trash==1.8.0
 six==1.16.0
+sklearn==0.0
 sniffio==1.3.0
 snntorch==0.5.3
 soupsieve==2.3.2.post1
 stack-data==0.5.1
 terminado==0.16.0
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 torch==1.12.1+cu116
 tornado==6.2
